--- a/films/services/engagement-session/index.html
+++ b/films/services/engagement-session/index.html
@@ -1093,7 +1093,7 @@
     <section class="engagement-hero">
         <!-- Hero Video Background -->
         <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; z-index: 0;">
-            <iframe src="https://player.vimeo.com/video/518215376?background=1&autoplay=1&loop=1&muted=1&byline=0&title=0&portrait=0#t=30s" 
+            <iframe src="https://player.vimeo.com/video/511889378?background=1&autoplay=1&loop=1&muted=1&byline=0&title=0&portrait=0#t=30s" 
                     style="position: absolute; top: 50%; left: 50%; width: 100vw; height: 56.25vw; min-height: 100vh; min-width: 177.77vh; transform: translate(-50%, -50%);"
                     frameborder="0" 
                     allow="autoplay; fullscreen; picture-in-picture" 
@@ -1168,7 +1168,7 @@
                 <div class="vibe-videos">
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/345305892?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="John & Nancy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/345305892?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="John & Nancy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>John & Nancy</h4>
@@ -1177,7 +1177,7 @@
                     </div>
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/339695406?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Star & Pedro"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/339695406?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Star & Pedro"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>Star & Pedro</h4>
@@ -1196,7 +1196,7 @@
                 <div class="vibe-videos">
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/988498444?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Devin & Yeelok"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/988498444?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Devin & Yeelok"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>Devin & Yeelok</h4>
@@ -1205,7 +1205,7 @@
                     </div>
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1076577538?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Carmela & Vlad"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1076577538?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Carmela & Vlad"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>Carmela & Vlad</h4>
@@ -1224,7 +1224,7 @@
                 <div class="vibe-videos">
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/511889378?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Mike & Jess"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/511889378?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Mike & Jess"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>Mike & Jess</h4>
@@ -1233,7 +1233,7 @@
                     </div>
                     <div class="vibe-item">
                         <div class="video-wrapper">
-                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/345305892?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="John & Nancy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/345305892?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="John & Nancy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                         </div>
                         <div class="vibe-info">
                             <h4>John & Nancy</h4>
