--- a/films/services/engagement-session/index.html
+++ b/films/services/engagement-session/index.html
@@ -1318,7 +1318,7 @@
                 
                 <!-- Carmela & Vlad Engagement (2024) -->
                 <div class="gallery-item" data-video-id="1076577538">
-                    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1076577538?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1#t=30s" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Carmela & Vlad Engagement - DVSN Studio"></iframe></div>
+                    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1076577538?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479&muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Carmela & Vlad Engagement - DVSN Studio"></iframe></div>
                 </div>
             </div>
         </div>
